--- a/example/format/format.html
+++ b/example/format/format.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>フォーマット</title>
-  <script type="text/javascript" src="../public/koyomi.min.js"></script>
+  <script type="text/javascript" src="../../public/koyomi.min.js"></script>
   <style type='text/css'>
     * {color: #6a1917;}
     ul {width: 600px; margin:0;}
