--- a/example/calendar/calendar1-1.html
+++ b/example/calendar/calendar1-1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>今年度カレンダー</title>
-  <script type="text/javascript" src="../public/koyomi.min.js"></script>
+  <script type="text/javascript" src="../../public/koyomi.min.js"></script>
   <style type='text/css'>
     * {color: #6a1917;}
     table {float: left;}
