--- a/example/calendar/calendar2-2.html
+++ b/example/calendar/calendar2-2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>カレンダー</title>
-  <script type="text/javascript" src="../public/koyomi.min.js"></script>
+  <script type="text/javascript" src="../../public/koyomi.min.js"></script>
   <style type='text/css'>
     * {color: #6a1917;}
     caption {font-size: 150%;}
@@ -21,13 +21,22 @@
 <body>
   <script>
     (function () {
-      var koyomi = new Koyomi({startMonth: 4, startWeek: '日'});
+
+      var koyomi = new Koyomi();
+
+      // URLより表示年を取得 (取得できない場合は今年)
+      var search = decodeURIComponent(location.search);
+      var range = /^\?\d{1,4}$/.test(search) ? search.slice(1) : new Date().getFullYear();
 
       // 必ず全てゴースト日になる列を省略するための最大値
       var max = 31 + 6;
 
+      var week = '日,月,火,水,木,金,土,';
+      // var week = 'Sun,Mon,Tue,Wed,Thu,Fri,Sat,';  // 英語ヘッダー
+      // var week = '月,火,水,木,金,土,日,';         // 月曜初め
+
       // 週の並び (max分)
-      var weeks = new Array(6+1).join('日月火水木金土').split('').slice(0, max);
+      var weeks = new Array(6+1).join(week).split(',').slice(0, max);
 
       // 曜日ヘッダの作成
       var head = Koyomi.getWeekIndex(weeks).map(function(x, i){
@@ -37,12 +46,17 @@
 
       // html作成
       var html = '<table>';
-      html += '<caption>' + koyomi.formatNendo(null, 'GGN年度 (Y/M', '-Y/M)') + '</caption>';
+      html += '<caption>' +
+              '<a href="?' + (range * 1 - 1) + '">&#x226A;</a>' +
+              '&nbsp;&nbsp;&nbsp;' + range + '年&nbsp;&nbsp;&nbsp;' +
+              '&nbsp;&nbsp;&nbsp;' + koyomi.format(range + '-1-1', 'GGN') + '年&nbsp;&nbsp;&nbsp;' +
+              '<a href="?' + (range * 1 + 1) + '">&#x226B;</a>' +
+              '</caption>\n';
       html += '<tr><th></th>' + head + '</tr>\n';
       var cut = 0;
 
       //カレンダーデータ
-      koyomi.getCalendarData().forEach(function(day) {
+      koyomi.getCalendarData(range, weeks[0]).forEach(function(day) {
 
         // 月初
         if (day.som) {
