--- a/example/calc/calc.html
+++ b/example/calc/calc.html
@@ -58,6 +58,9 @@
     <dt>Koyomi.remainDays(date)</dt>
     <dd>( <input type="text" id="RemainDays1" d /> ) &#x226B; <input type="text" id="RemainDaysR" /></dd>
 
+    <dt>Koyomi.getAge(brithday, when)</dt>
+    <dd>( <input type="text" id="GetAge1" d />, <input type="text" id="GetAge2" d /> ) &#x226B; <input type="text" id="GetAgeR" /></dd>
+
     <dt>Koyomi.getHolidays(date)</dt>
     <dd>( <input type="text" id="GetHolidays1" y /> ) &#x226B; <input type="text" id="GetHolidaysR" style="width:500px;" /></dd>
 
